[project]
name = "clipvision_tools"
description = "Custom ComfyUI nodes using CLIP Vision models for image similarity analysis."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# only orjson and pillow-heif are needed so far:", "orjson", "pillow-heif"]

[project.urls]
Repository = "https://github.com/MoonMoon82/ClipVision_Tools"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/MoonMoon82/ClipVision_Tools/wiki"
"Bug Tracker" = "https://github.com/MoonMoon82/ClipVision_Tools/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ClipVision_Tools"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

